applications/sample-site/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-site
  labels:
    app.kubernetes.io/name: sample-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-site
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-site
    spec:
      securityContext:
        fsGroup: 2000
      containers:
      - name: sample-site
        image: "victorcuascut/sample-site"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
