applications/sample-site/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-site
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: sample-site
          servicePort: 80
    host: sample-site.com
